# spl-agent-2-re-agent

./: .gitignore  README.md
multi_agent_interview/: requirements.txt
multi_agent_interview/backend/app/: agents.py  llm.py  main.py  models.py  orchestrator.py  session_manager.py  skills.py
multi_agent_interview/backend/skills/requirements-elicitation/: SKILL.md
multi_agent_interview/backend/skills/requirements-elicitation/assets/: interview_framework_schema.json  (+1 more)
multi_agent_interview/frontend/: app.js  index.html  style.css
spl_agent/: API.md  AST.py  README.md  client.py  diagram.py  method.py  method_analyzer.py  package-lock.json  pyproject.toml  requirements.txt  run_from_config.py  settings.yaml
spl_agent/prompt/: class_analyzer.txt  control_flow_analyzer.txt  data_flow_analyzer.txt  diagram_planner.txt  function_analyzer.txt  function_call_analyzer.txt  method_spl_agent.txt
spl_agent/prompt/diagram/: diagram.py  entity_extraction.txt  graph_structure_generation.txt  relationship_extraction.txt
spl_agent/spl_system/: __init__.py  cli.py  client.py
spl_agent/spl_system/api/: __init__.py  app.py
spl_agent/spl_system/core/: __init__.py  agent_loop.py  builder.py  config.py  legacy_spl.py  llm_runtime.py  models.py  python_scanner.py  semantic_builder.py  service.py  sources.py  store.py  tools.py
spl_agent/spl_system/resources/: __init__.py
spl_agent/spl_system/resources/prompt/: __init__.py  method_spl_agent.txt
spl_agent/spl_system/resources/template/: Method.txt  __init__.py
spl_agent/template/: Class.txt  File.txt  Method.txt
(+20 files in other folders)
